# chronio

./: .gitignore  README.md  __init__.py  analyses.py  conversions.py  environment.yml  exporter.py  requirements.txt  setup.cfg  setup.py  slicingtools.py  trial_utils.py
anymaze/: __init__.py  anymaze_params.py  file_params.py
anymaze/behavior_utils/structs/: group_data.py  metadata.py  structure.py  time_series.py  window_data.py
anymaze/behavior_utils/visualize/: plotting.py  positional_plots.py
anymaze/export/: __init__.py  exporter.py
anymaze/process/: __init__.py
behavior_utils/metadata/: individual_metadata.py
behavior_utils/process/: analyses.py
behavior_utils/structs/: time_series.py  window_data.py
behavior_utils/visualize/: plot_defaults.py  plotting.py  positional_plots.py
chronio/: anymaze_params.py  main.py
chronio/behavior_utils/: __init__.py
chronio/behavior_utils/structs/: __init__.py  structure.py  time_series.py
chronio/behavior_utils/visualize/: plotting.py  positional_plots.py
src/chronio/: __init__.py  analyses.py  convention.py  exceptions.py  experiment.py  logging_config.py  observations.py  structs.py  utils.py
src/chronio/design/: __init__.py  convention.py  experiment.py
src/chronio/designer/: convention.py
structures/: __init__.py  group_data.py  session_data.py  time_series.py  window_data.py
tests/: analyses.py  behavior.py  conversions.py  derived_structs.py  exporter.py  observations.py  plotting.py  positional_plots.py  raw_structs.py
visualize/: __init__.py  plotting.py  positional_plots.py
(+38 files in other folders)
