[metadata]
name = chronio-alimoges42
version = 0.0.1
author = Aaron Limoges
author_email = aaronlimoges42@gmail.com
description = A toolbox for analysis of physiological time series data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alimoges42/anymaze
project_urls =
    Bug Tracker = https://github.com/alimoges42/anymaze/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src